Updated APIs with business logic and added broker
